@@ -9,17 +9,18 @@ import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.scheduler.BukkitRunnable;
 
-import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.UUID;
@@ -31,7 +32,6 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
     private String apiUrl;
     private String apiKey;
     private int refreshInterval;
-    private final Gson gson = new Gson();
     
     // Cache für Spielereinstellungen
     private final Map<String, Map<String, Boolean>> playerSettings = new ConcurrentHashMap<>();
@@ -58,8 +58,12 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
         getServer().getPluginManager().registerEvents(this, this);
         
         // Befehle registrieren
-        getCommand("settings").setExecutor(new SettingsCommand(this));
-        getCommand("requests").setExecutor(new ActionRequestCommand(this, actionRequestManager));
+        if (getCommand("settings") != null) {
+            getCommand("settings").setExecutor(new SettingsCommand(this));
+        }
+        if (getCommand("requests") != null) {
+            getCommand("requests").setExecutor(new ActionRequestCommand(this, actionRequestManager));
+        }
         
         // Spielereinstellungen beim Start laden
         loadPlayerSettings();
@@ -99,8 +103,8 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
             public void run() {
                 try {
                     // API-Anfrage senden
-                    URL url = new URL(apiUrl + "?key=" + apiKey);
-                    HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+                    URI uri = new URI(apiUrl + "?key=" + apiKey);
+                    HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
                     conn.setRequestMethod("GET");
                     conn.setRequestProperty("Accept", "application/json");
                     
@@ -110,13 +114,13 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
                         return;
                     }
                     
-                    BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
                     StringBuilder response = new StringBuilder();
-                    String line;
-                    while ((line = reader.readLine()) != null) {
-                        response.append(line);
+                    try (BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
+                        String line;
+                        while ((line = reader.readLine()) != null) {
+                            response.append(line);
+                        }
                     }
-                    reader.close();
                     
                     // JSON parsen
                     JsonObject jsonObject = JsonParser.parseString(response.toString()).getAsJsonObject();
@@ -146,7 +150,7 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
                         getLogger().info("Spielereinstellungen aktualisiert: " + playerSettings.size() + " Spieler");
                     });
                     
-                } catch (Exception e) {
+                } catch (IOException | URISyntaxException e) {
                     getLogger().log(Level.WARNING, "Fehler beim Laden der Spielereinstellungen", e);
                 }
             }
@@ -209,8 +213,8 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
                     requestBody.add("playerStats", statsArray);
                     
                     // API-Anfrage senden
-                    URL url = new URL(apiUrl + "?key=" + apiKey);
-                    HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+                    URI uri = new URI(apiUrl + "?key=" + apiKey);
+                    HttpURLConnection conn = (HttpURLConnection) uri.toURL().openConnection();
                     conn.setRequestMethod("POST");
                     conn.setRequestProperty("Content-Type", "application/json");
                     conn.setRequestProperty("Accept", "application/json");
@@ -230,7 +234,7 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
                     
                     getLogger().info("Spielerstatistiken erfolgreich gesendet: " + playerStats.size() + " Spieler");
                     
-                } catch (Exception e) {
+                } catch (IOException | URISyntaxException e) {
                     getLogger().log(Level.WARNING, "Fehler beim Senden der Spielerstatistiken", e);
                 }
             }
@@ -256,7 +260,7 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
         
         // Offline-Spieler suchen
         for (Map.Entry<String, Map<String, Boolean>> entry : playerSettings.entrySet()) {
-            Player offlinePlayer = Bukkit.getOfflinePlayer(UUID.fromString(uuid.toString())).getPlayer();
+            Player offlinePlayer = Bukkit.getOfflinePlayer(uuid).getPlayer();
             if (offlinePlayer != null && offlinePlayer.getUniqueId().equals(uuid)) {
                 return entry.getKey();
             }
@@ -272,21 +276,11 @@ public class FrogCraftManager extends JavaPlugin implements Listener {
         PlayerStats stats = playerStats.computeIfAbsent(username.toLowerCase(), k -> new PlayerStats());
         
         switch (statType) {
-            case "death":
-                stats.incrementDeaths();
-                break;
-            case "kill":
-                stats.incrementKills();
-                break;
-            case "block_break":
-                stats.incrementBlocksBroken(amount);
-                break;
-            case "block_place":
-                stats.incrementBlocksPlaced(amount);
-                break;
-            case "playtime":
-                stats.incrementPlaytimeMinutes(amount);
-                break;
+            case "death" -> stats.incrementDeaths();
+            case "kill" -> stats.incrementKills();
+            case "block_break" -> stats.incrementBlocksBroken(amount);
+            case "block_place" -> stats.incrementBlocksPlaced(amount);
+            case "playtime" -> stats.incrementPlaytimeMinutes(amount);
         }
     }
     
